--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "3.11.5"
 loguru = "^0.7.2"
 pytest = "^8.3.3"
+requests = "^2.32.3"
+pydantic = "^2.10.2"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
