--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,5 @@
 # Astro Runtime includes the following pre-installed providers packages: https://www.astronomer.io/docs/astro/runtime-image-architecture#provider-packages
+
+requests==2.32.3
+pydantic==2.10.2
+python-dotenv==1.0.1
