feature: ajsute .env

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-URLPOSTGRES=postgresql://api_pk_airflow_free_user:6j8QdjQVwfm5j4iGkim4gLmFNHfyd6cp@dpg-ct3401aj1k6c73e2ih00-a.virginia-postgres.render.com/api_pk_airflow_free
+URLPOSTGRES=...
 
 AIRFLOW__CORE__ALLOWED_DESERIALIZATION_CLASSES=include.schema.PokemonSchema
